--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,88 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100;200;300;400;500;600;700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'Outfit', 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', 'sans-serif';
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .App {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  background-color: rgba(0,0,0,0.7);
+  color: #fff;
+  background: url('./assets/sunset.jpg')no-repeat center center/cover;
+}
+.container1 {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+p {
+  font-size: 1.6rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+h1 {
+  font-size: 6rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search {
+  margin: 2rem;
+  align-self: center;
+  text-align: center;
+  padding: 1rem;
+}
+
+input {
+  height: fit-content;
+  padding: 10px;
+  font-size: 1rem;
+  margin-right: 16px;
+  border-radius: 1.3rem;
+  opacity: 50%;
+  border: 1px solid rgba(255,255,255, 0.8);
+  padding: .7rem 1.5rem;
+}
+
+::placeholder {
+  color: #f8f8f8;
+}
+
+#button {
+  height: fit-content;
+  padding: 10px 16px;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 1.3rem;
+  opacity: 50%;
+  border: 1px solid rgba(255,255,255, 0.8);
+  
+}
+
+.top {
+  text-align: left;
+  margin-left: 8rem;
+  margin-top: 3rem;
+}
+
+.bottom {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-evenly;
+  text-align: center;
+  width: 50%;
+  margin: 10rem auto;
+  background-color: rgba(255,255,255, 0.2);
+  border-radius: 0.4rem;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.feels_like .speed .humidity {
+  text-align: center;
+  font-weight: 700;
 }
